# my_house_energy_consumption

./: .env.sample  .gitignore  API_README.md  Dockerfile  Dockerfile.collector  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_SUMMARY.md  convert_duckdb_to_sqlite.py  docker-compose.yml  home_assistant_example.yaml  migrate_csv_to_duckdb.py  pyproject.toml  requirements.txt  sample_consumption_data.csv  start_api.sh  tibber_collector.py  tibber_collector_sqlite.py
addon/: Dockerfile  INSTALL.md  README.md  config.yaml  entrypoint.sh  run.sh
api/: main.py
