[project]
name = "my-house-energy-consumption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
    "duckdb>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pyarrow>=14.0.0",
    "pytz>=2024.0",
]
